--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-django==3.2.16
+Django==3.2.16
+asgiref==3.8.1
+django-bootstrap5==22.2
+Pillow==9.3.0
+pytz==2024.1
+sqlparse==0.5.0
+typing_extensions==4.12.2
